--- a/rakarrack/rkr_Infinity.modgui/modgui/icon-rkr-infinity.html
+++ b/rakarrack/rkr_Infinity.modgui/modgui/icon-rkr-infinity.html
@@ -1,13 +1,13 @@
-<div class="mod-pedal mod-pedal-lata{{{cns}}} mod-eight-knobs mod-boxy75 mod-{{color}} {{color}}">
+<div class="mod-pedal mod-pedal-boxy{{{cns}}} mod-twelve-sliders mod-boxy100 mod-{{color}} {{color}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
     <div class="mod-light on" mod-role="bypass-light"></div>
     <div class="mod-control-group clearfix">
         {{#controls}}
-        <div class="mod-knob">
-            <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
-            <span class="mod-knob-title">{{name}}</span>
+        <div class="mod-slider" mod-role="icon-button" mod-button-type="slider">
+            <span class="mod-slider-title">{{name}}</span>
+            <div class="mod-slider-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
         </div>
         {{/controls}}
     </div>
